Fixed z-index on carousel control buttons

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -88,6 +88,7 @@ body {
   text-shadow: 0 1px 1px rgba(0,0,0,.4);
   background-color: transparent;
   border: 0;
+  z-index: 12;
 }
 
 .carousel .item {
